--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -8,9 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="estilos/inicio_sesion.css">
 </head>
 <body>
 
+
+    
     <!--NAVBAR-->
     <nav class="nav.navbar navbar-expand-lg bg-black navbar-dark py-3">
         <div class="container">
@@ -41,35 +44,32 @@
         </div>
    </nav>
 
-
-   <div class="container py-5">
-    <div class="abs-center">
-      <form action="#">
-        <div class="form-group p-3">
-          <label for="email">Usuario</label>
-          <input type="email" name="email" id="email" class="form-control">
-        </div>
-        <div class="form-group p-3">
-          <label for="password">Contraseña</label>
-          <input type="password" name="password" id="password" class="form-control">
-        </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-      </form>
+   <div class="container">
+    <div class="row justify-content-center pt-5 mt-5">
+        <div class="col-md-6 col-sm-8 col-xl-6 col-lg-5 formulario">
+            <form action="">
+            <div class="form-group text-center">
+                 <h1 class="text-white">Iniciar sesion</h1>
+                 <div id="centrador">
+                    <img src="login.png" class="rounded-circle" id="img">  
+                    </div>
+            </div>
+            <div class="form-group mx-sm-4  pb-3">
+                <input type="text" class="form-control" placeholder="usuario">
+            </div>
+            <div class="form-group mx-sm-4 pb-3">
+                <input type="text" class="form-control" placeholder="usuario">
+            </div>
+            <div class="form-group mx-sm-4 pb-4">
+                <input type="submit" class="btn btn-block ingresar" value="ingresar">
+            </div>
+            </form>  
+        </div>   
     </div>
-  </div>
+</div>
 
 
 
-<!--Footer-->
-    <footer class="p-5 bg-black text-white text-center position-relative">
-        <div class="container">
-            <p class="lead">Copyright &copy; 2022 Tindware</p>
-            <a href="#" class="position-absolute bottom-0 end-0 p-5">
-                <i class="bi bi-arrow-up h1"></i>
-            </a>
-        </div>
-    
-    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
