--- a/qs.html
+++ b/qs.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="estilos/inicio_sesion.css">
+    <link rel="stylesheet" type="text/css" href="estilos/inicio_sesion.css">
 </head>
 <body>
 
@@ -42,7 +44,7 @@
    </nav>
 
     <!--quienes somos-->
-    <section id="learn" class="text-dark">
+    <section id="learn" class="text-white">
         <p class="h1 text-center py-5">¿Quienés somos?</p>
         <div class="container-md">
             <div class="row">
