--- a/FAQ.html
+++ b/FAQ.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="estilos/inicio_sesion.css">
-</head>
+  <link rel="stylesheet" type="text/css" href="estilos/faq.css">
+  </head>
 <body>
 
     <!--NAVBAR-->
@@ -42,42 +43,42 @@
       </div>
  </nav>
 <!--FAQ-->
-<section id="faq">
-<div class="accordion accordion-flush py-4 p-5" id="accordionFlushExample">
-    <h2 class="text-center py-4">Preguntas mas frecuentes</h2>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="flush-headingOne">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+<section>  
+<div class="accordion accordion-flush py-4 p-5 faq text-white" id="accordionFlushExample">
+    <h2 class="text-center text-white py-4">Preguntas mas frecuentes</h2>
+    <div class="accordion-item faq">
+      <h2 class="accordion-header faq" id="flush-headingOne">
+        <button class="accordion-button collapsed faq" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
           ¿Puedo elegir al técnico que va a solventar mi problema?
         </button>
       </h2>
-      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">No, el técnico es el que elegirá qué incidencia solventar.
+      <div id="flush-collapseOne" class="accordion-collapse collapse faq" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body faq">No, el técnico es el que elegirá qué incidencia solventar.
         </div>
       </div>
     </div>
-    <div class="accordion-item">
+    <div class="accordion-item faq">
       <h2 class="accordion-header" id="flush-headingTwo">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
           ¿Cuántas incidencias puedo tener en mi perfil al mismo tiempo?
         </button>
       </h2>
-      <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+      <div id="flush-collapseTwo" class="accordion-collapse collapse faq" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
         <div class="accordion-body">Tantas como quieras.  </div>
       </div>
     </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="flush-headingThree">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+    <div class="accordion-item faq">
+      <h2 class="accordion-header faq" id="flush-headingThree">
+        <button class="accordion-button collapsed faq" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
         ¿Hay alguna forma de saber cuando me han solucionado mi problema?
         </button>
       </h2>
-      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+      <div id="flush-collapseThree" class="accordion-collapse collapse faq" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
         <div class="accordion-body">Se te notificará en Tindware cuando el técnico de por finalizada la sesión.</div>
       </div>
       
     </div>
-    <div class="accordion-item">
+    <div class="accordion-item faq">
         <h2 class="accordion-header" id="flush-headingFour">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">          
           ¿Hay algún día o alguna fecha en la que el servicio no esté disponible?
