--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -51,7 +51,7 @@
             <div class="form-group text-center">
                  <h1 class="text-white">Iniciar sesion</h1>
                  <div id="centrador">
-                    <img src="login.png" class="rounded-circle" id="img">  
+                    <img src="img/login2.png" class="rounded-circle" id="img">  
                     </div>
             </div>
             <div class="form-group mx-sm-4  pb-3">
