--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="iniciosesion.html" class="nav-link  text-white">Iniciar sesión</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#learn" class="nav-link  text-white">Registro</a>
+                    <a href="registro.html" class="nav-link  text-white">Registro</a>
                 </li>
             </ul>
         </div>
@@ -140,9 +140,9 @@
         </div>
     </div>
 </section>
-<!--FAQ-->
+<!-- Los creadores de la empresa-->
 
-<section id="intructors" class="p-5 bg-black">
+<section id="intructors" class="p-5">
     <div class="container">
         <h2 class="text-center text-white">Nuestro equipo</h2>
         <p class="lead text-center text-white mb-3">
@@ -303,7 +303,7 @@ aria-hidden="true">
             <div class="form-group text-center">
                  <h3 class="text-white">Iniciar sesion</h3>
                  <div id="centrador">
-                    <img src="img/login.png" class="rounded-circle" id="img">  
+                    <img src="img/login.png" class="rounded-circle img">  
                     </div>
             </div>
             <div class="form-group mx-sm-4  pb-3">
