--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -37,7 +37,7 @@
                     <a href="iniciosesion.html" class="nav-link">Iniciar sesión</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#learn" class="nav-link">Registro</a>
+                    <a href="registro.html" class="nav-link">Registro</a>
                 </li>
             </ul>
         </div>
@@ -49,12 +49,12 @@
         <div class="col-md-6 col-sm-8 col-xl-6 col-lg-5 formulario">
             <form action="">
             <div class="form-group text-center">
-                 <h1 class="text-white">Iniciar sesion</h1>
+                 <h4 class="text-white">Iniciar sesion</h4>
                  <div id="centrador">
-                    <img src="img/login2.png" class="rounded-circle" id="img">  
-                    </div>
+                    <img src="img/login2.png" class="rounded-circle img">  
+                </div>
             </div>
-            <div class="form-group mx-sm-4  pb-3">
+            <div class="form-group mx-sm-4 pb-3">
                 <input type="text" class="form-control" placeholder="usuario">
             </div>
             <div class="form-group mx-sm-4 pb-3">
