--- a/registro.html
+++ b/registro.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="estilos/inicio_sesion.css" type="text/css">
 </head>
 <body>
 
@@ -40,6 +41,58 @@
         </div>
         </div>
    </nav>
+
+   <div class="container">
+    <div class="row justify-content-center pt-5 mt-5 text-white">
+        <div class="col-md-6 col-sm-8 col-lg-6 col-lg-5 formulario">
+            <form action="" method="">
+                    <div class="form-group text-center">
+                        <h4>Registro de usuario</h4>
+                        <div id="centrador">
+                            <img src="img/registro.png" class="rounded-circle img">
+                        </div>
+                    </div>
+                    <div class="form-group mx-sm-4 pb-3">
+                        <input type="text" class="form-control" placeholder="Nombre de usuario">
+                    </div>
+                    <div class="form-group mx-sm-4 pb-3">
+                        <input type="password" class="form-control" placeholder="Contraseña">
+                    </div>
+                    <div class="form-group mx-sm-4 pb-3">
+                        <input type="email" class="form-control" placeholder="Correo electrónico">
+                    </div>
+                    <div class="form-group mx-sm-4 pb-3">
+                        <select class="form-control">
+                            <option value="particular">Particular</option>
+                            <option value="tecnico">Tecnico</option>
+                        </select>
+                    </div>
+                    <div class="form-group mx-sm-4 pb-3">
+                        <input type="date" class="form-control" placeholder="Fecha de nacimiento">
+                    </div>
+                    <div class="form-group mx-sm-4 pb-3">
+                        <input type="submit" class="btn btn-block ingresar" value="Registrarse">
+                    </div>
+                    <div class="form-group mx-sm-4 pb-3 text-center">
+                        <a href="iniciosesion.html" class="text-warning">¿Ya tienes una cuenta?</a>
+                    </div>
+
+
+            </form>
+        </div>
+
+
+    </div>
+
+
+
+
+
+   </div>
+
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
