--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -55,13 +55,16 @@
                 </div>
             </div>
             <div class="form-group mx-sm-4 pb-3">
-                <input type="text" class="form-control" placeholder="usuario">
+                <input type="text" class="form-control" placeholder="Usuario">
             </div>
             <div class="form-group mx-sm-4 pb-3">
-                <input type="text" class="form-control" placeholder="usuario">
+                <input type="password" class="form-control" placeholder="Contraseña">
             </div>
             <div class="form-group mx-sm-4 pb-4">
                 <input type="submit" class="btn btn-block ingresar" value="ingresar">
+            </div>
+            <div class="form-group mx-sm-4 pb-3 text-center">
+                <a href="registro.html" class="text-warning">¿No tienes una cuenta?</a>
             </div>
             </form>  
         </div>   
