--- a/registro.html
+++ b/registro.html
@@ -63,8 +63,8 @@
                     </div>
                     <div class="form-group mx-sm-4 pb-3">
                         <select class="form-control">
-                            <option value="particular">Particular</option>
-                            <option value="tecnico">Tecnico</option>
+                            <option value="particular" class="select">Particular</option>
+                            <option value="tecnico" class="select">Tecnico</option>
                         </select>
                     </div>
                     <div class="form-group mx-sm-4 pb-3">
@@ -76,18 +76,9 @@
                     <div class="form-group mx-sm-4 pb-3 text-center">
                         <a href="iniciosesion.html" class="text-warning">¿Ya tienes una cuenta?</a>
                     </div>
-
-
             </form>
         </div>
-
-
     </div>
-
-
-
-
-
    </div>
 
 
