--- a/contenedores/index.html
+++ b/contenedores/index.html
@@ -40,6 +40,17 @@
            </div>
         </div>
       </div>
+      <div class="centered">
+        <div class="plus" id="plus">
+          <div class="plus__line plus__line--v">
+            <a href="#" class="plus__link ion-person"></a>
+            <a href="#" class="plus__link ion-images"></a>
+            <a href="#" class="plus__link ion-music-note"></a>
+            <a href="#" class="plus__link ion-location"></a>
+          </div>
+          <div class="plus__line plus__line--h"></div>
+        </div>
+      </div>
 
     
 </body>
