--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <!--menu-->
-   <nav class="nav.navbar navbar-expand-lg bg-black navbar-dark py-3">
+   <nav class="nav.navbar navbar-expand-lg  navbar-dark py-3">
         <div class="container">
             <a href="index.html" class="navbar-brand fs-1">TindWare</a>
             <button 
@@ -75,11 +75,11 @@
 <!--cajones de texto-->
 <section class="p-5">
     <div class="container">
-        <div class="row text-center">
+        <div class="row text-white">
             <div class="container">
-                <div class="row text-center g-3">   
+                <div class="row g-3">   
                     <div class="col-md">
-                        <div class="card bg-black text-light p-3">
+                        <div class="card p-3">
                             <div class="card-body text-center">
                                 <div class="h1 mb-3 ">
                                     <i class="bi bi-person-square"></i>
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="col-md">
-                        <div class="card bg-black text-light p-3">
+                        <div class="card p-3">
                             <div class="card-body text-center">
                                 <div class="h1 mb-3">
                                     <i class="bi bi-alarm"></i>
@@ -104,7 +104,7 @@
                         
                     </div>
                     <div class="col-md">
-                        <div class="card bg-black text-light p-3">
+                        <div class="card p-3">
                             <div class="card-body text-center">
                                 <div class="h1 mb-3">
                                     <i class="bi bi-display"></i>
