--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -16,7 +16,7 @@
 
     
     <!--NAVBAR-->
-    <nav class="nav.navbar navbar-expand-lg bg-black navbar-dark py-3">
+    <nav class="nav.navbar navbar-expand-lg  navbar-dark py-3">
         <div class="container">
             <a href="index.html" class="navbar-brand fs-1">TindWare</a>
             <button 
