--- a/qs.html
+++ b/qs.html
@@ -17,7 +17,7 @@
 <body>
 
     <!--menu-->
-    <nav class="nav.navbar navbar-expand-lg bg-black navbar-dark py-3 ">
+    <nav class="nav.navbar navbar-expand-lg  navbar-dark py-3 ">
         <div class="container">
             <a href="index.html" class="navbar-brand fs-1">TindWare</a>
             <button 
