--- a/registro.html
+++ b/registro.html
@@ -14,7 +14,7 @@
 <body>
 
     <!--NAVBAR-->
-    <nav class="nav.navbar navbar-expand-lg bg-black navbar-dark py-3">
+    <nav class="nav.navbar navbar-expand-lg  navbar-dark py-3">
         <div class="container">
             <a href="index.html" class="navbar-brand fs-1">TindWare</a>
             <button 
