--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
                                
                             </div>
                         </div>
-                        
                     </div>
                     <div class="col-md">
                         <div class="card p-3">
@@ -127,7 +126,6 @@
 
 <section id="learn" class="p-5">
     <div class="container">
-
         <div class="row align-items-center justify-content-between">
             <div class="col-md">
                 <img src="img/cerebro.png" class="img-fluid align" width="350">
@@ -146,106 +144,107 @@
         </div>
     </div>
 </section>
-<!-- Los creadores de la empresa-->
 
-<section id="intructors" class="p-5">
+<!-- Fundadores de la empresa-->
+
+<section id="intructors" class="p-5 text-white">
     <div class="container">
-        <h2 class="text-center text-white">Nuestro equipo</h2>
-        <p class="lead text-center text-white mb-3">
+        <h2 class="text-center text-white p-1">Nuestro equipo</h2>
+        <p class="lead text-center text-white p-3">
             Cada uno de nosotros es fundamental en el desarrollo de la empresa.
         </p>
         <div class="row g-4">
-        <div class="col-md-6 col-lg-3">
-            <div class="card bg-light">
+        <div class="col-md-6 col-lg-4">
+            <div class="card text-white">
                 <div class="card-body text-center">
-                    <img src="img/imagen.jpg" class="rounded-circle mb-3 w-50">
+                    <img src="img/imagen.jpg" class="rounded-circle mb-3 foto-equipo">
                     <h3 class="card-title mb-3">
                         Asier Mejuto
                     </h3>
-                    <p class="card-text">Jefe de Seguridad y Disponilidad de Sistemas y Redes</p>
-                    <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a> 
-                    <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
-                    <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                    <p class="card-text text-white">Jefe de Seguridad y Disponilidad de Sistemas y Redes</p>
+                    <a href="#"><i class="bi bi-twitter text-white mx-1"></i></a> 
+                    <a href="#"><i class="bi bi-instagram text-white mx-1"></i></a>
+                    <a href="#"><i class="bi bi-linkedin text-white mx-1"></i></a>
                     </i></a>
                 </div>
   
             </div>
         </div>
-        <div class="col-md-6 col-lg-3">
-            <div class="card bg-light">
+        <div class="col-md-6 col-lg-4 text-white ">
+            <div class="card">
                 <div class="card-body text-center">
-                    <img src="img/imagen.jpg" class="rounded-circle mb-3 w-50">
+                    <img src="img/imagen.jpg" class="rounded-circle mb-3 foto-equipo">
                     <h3 class="card-title mb-3">
                         Ander Herrero
                     </h3>
                     <p class="card-text">Atención al Cliente y Departamento de Hardware</p>
-                    <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a> 
-                    <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
-                    <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                    <a href="#"><i class="bi bi-twitter text-white mx-1"></i></a> 
+                    <a href="#"><i class="bi bi-instagram text-white mx-1"></i></a>
+                    <a href="#"><i class="bi bi-linkedin text-white mx-1"></i></a>
 
                     </i></a>
                 </div>
   
             </div>
         </div>
-        <div class="col-md-6 col-lg-3">
-            <div class="card bg-light">
+        <div class="col-md-6 col-lg-4">
+            <div class="card">
                 <div class="card-body text-center">
-                    <img src="img/diamante.jpg" class="rounded-circle mb-3 w-50">
+                    <img src="img/prueba.jpg" class="rounded-circle mb-3 foto-equipo">
                     <h3 class="card-title mb-3">
                         José Luis Villalba
                     </h3>
                     <p class="card-text">Departamento de Marketing y Relaciones Públicas</p>
-                    <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a> 
-                    <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
-                    <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                    <a href="#"><i class="bi bi-twitter text-white mx-1"></i></a> 
+                    <a href="#"><i class="bi bi-instagram text-white mx-1"></i></a>
+                    <a href="#"><i class="bi bi-linkedin text-white mx-1"></i></a>
                     </i></a>
                 </div>
   
             </div>
         </div>
-        <div class="col-md-6 col-lg-3">
-            <div class="card bg-light">
+        <div class="col-md-6 col-lg-4">
+            <div class="card">
                 <div class="card-body text-center">
-                    <img src="img/imagen.jpg" class="rounded-circle mb-3 w-50">
+                    <img src="img/imagen.jpg" class="rounded-circle mb-3 foto-equipo">
                     <h3 class="card-title mb-3">
                         Alex Crespo
                     </h3>
                     <p class="card-text">RRHH</p>
-                    <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a> 
-                    <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
-                    <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                    <a href="#"><i class="bi bi-twitter text-white mx-1"></i></a> 
+                    <a href="#"><i class="bi bi-instagram text-white mx-1"></i></a>
+                    <a href="#"><i class="bi bi-linkedin text-white mx-1"></i></a>
                     </i></a>
                 </div>
 
             </div>
         </div>
-        <div class="col-md-6 col-lg-3">
-            <div class="card bg-light">
+        <div class="col-md-6 col-lg-4">
+            <div class="card">
                 <div class="card-body text-center">
-                    <img src="img/adrian.png" class="rounded-circle mb-3 w-50">
+                    <img src="img/adrian.jpg" class="rounded-circle mb-3 foto-equipo">
                     <h3 class="card-title mb-3">
                         Adrián Martinez
                     </h3>
                     <p class="card-text">Marketing Y relaciones públicas</p>
-                    <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a> 
-                    <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
-                    <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                    <a href="#"><i class="bi bi-twitter text-white mx-1"></i></a> 
+                    <a href="#"><i class="bi bi-instagram text-white mx-1"></i></a>
+                    <a href="#"><i class="bi bi-linkedin text-white mx-1"></i></a>
                 </div>
   
             </div>
         </div>
-        <div class="col-md-6 col-lg-3">
-            <div class="card bg-light">
+        <div class="col-md-6 col-lg-4">
+            <div class="card">
                 <div class="card-body text-center">
-                    <img src="img/anthony.png" class="rounded-circle mb-3 w-50">
+                    <img src="img/anthony(1).jpg" class="rounded-circle mb-3 foto-equipo">
                     <h3 class="card-title mb-3">
                         Anthony Murriel
                     </h3>
                     <p class="card-text">CEO y Desarrollador Frontend</p>
-                    <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a> 
-                    <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
-                    <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                    <a href="#"><i class="bi bi-twitter text-white mx-1"></i></a> 
+                    <a href="#"><i class="bi bi-instagram text-white mx-1"></i></a>
+                    <a href="#"><i class="bi bi-linkedin text-white mx-1"></i></a>
                     </i></a>
                 </div>
             </div>
