--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <h1>Bienvenido TindWare</h1>
                             <p class="lead my-5 fs-4">Bienvenido a TindWare, el servicio técnico 24/7, los 365 dias del año.</p>
                         <button id="button" 
-                        class="btn btn-dark" 
+                        class="btn btn-dark button" 
                         data-bs-toggle="modal" 
                         data-bs-target="#enroll"
                         >Iniciar sesion
