--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="estilos/inicio_sesion.css">
-    <link rel="stylesheet" href="custom.css">
     <link rel="stylesheet" type="text/css" href="estilos/index.css">
     <link rel="stylesheet" type="text/css" href="estilos/qs.css">
     <link rel="stylesheet" type="text/css" href="estilos/footer.css">
+    <link rel="stylesheet" type="text/css" href="estilos/header.css">
+
 </head>
 <body>
 
     <!--menu-->
-   <nav class="nav.navbar navbar-expand-lg  navbar-dark py-3">
+   <nav class="nav.navbar navbar-expand-lg  navbar-dark py-3 fixed-top menu">
         <div class="container">
             <a href="index.html" class="navbar-brand fs-1">TindWare</a>
             <button 
@@ -32,13 +33,13 @@
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a href="qs.html" class="nav-link  text-white">Quienes somos</a>
+                    <a href="qs.html" class="nav-link text-white">Quienes somos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="FAQ.html" class="nav-link  text-white">FAQ</a>
+                    <a href="FAQ.html" class="nav-link text-white">FAQ</a>
                 </li>
                 <li class="nav-item">
-                    <a href="iniciosesion.html" class="nav-link  text-white">Iniciar sesión</a>
+                    <a href="iniciosesion.html" class="nav-link text-white">Iniciar sesión</a>
                 </li>
                 <li class="nav-item">
                     <a href="registro.html" class="nav-link  text-white">Registro</a>
