--- a/qs.html
+++ b/qs.html
@@ -13,11 +13,13 @@
     <link rel="stylesheet" type="text/css" href="estilos/inicio_sesion.css">
     <link rel="stylesheet" type="text/css" href="estilos/qs.css">
     <link rel="stylesheet" type="text/css" href="estilos/footer.css">
+    <link rel="stylesheet" type="text/css" href="estilos/header.css">
+
 </head>
 <body>
 
     <!--menu-->
-    <nav class="nav.navbar navbar-expand-lg  navbar-dark py-3 ">
+    <nav class="nav.navbar navbar-expand-lg  navbar-dark py-3 fixed-top menu">
         <div class="container">
             <a href="index.html" class="navbar-brand fs-1">TindWare</a>
             <button 
@@ -27,24 +29,26 @@
             data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
+        <!-- Aqui la barra de navegacion-->
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a href="qs.html" class="nav-link">Quienes somos</a>
+                    <a href="qs.html" class="nav-link text-white">Quienes somos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="FAQ.html" class="nav-link">FAQ</a>
+                    <a href="FAQ.html" class="nav-link text-white">FAQ</a>
                 </li>
                 <li class="nav-item">
-                    <a href="iniciosesion.html" class="nav-link">Iniciar sesión</a>
+                    <a href="iniciosesion.html" class="nav-link text-white">Iniciar sesión</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#learn" class="nav-link">Registro</a>
+                    <a href="registro.html" class="nav-link  text-white">Registro</a>
                 </li>
             </ul>
         </div>
         </div>
-   </nav>
+   </nav> 
+
 
     <!--slider -->
 
