--- a/registro.html
+++ b/registro.html
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="estilos/inicio_sesion.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="estilos/footer.css">
+    <link rel="stylesheet" type="text/css" href="estilos/header.css">
+
 </head>
 <body>
 
     <!--NAVBAR-->
-    <nav class="nav.navbar navbar-expand-lg  navbar-dark py-3">
+    <nav class="nav.navbar navbar-expand-lg  navbar-dark py-3 fixed-top menu">
         <div class="container">
             <a href="index.html" class="navbar-brand fs-1">TindWare</a>
             <button 
@@ -24,24 +26,25 @@
             data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
+        <!-- Aqui la barra de navegacion-->
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a href="qs.html" class="nav-link">Quienes somos</a>
+                    <a href="qs.html" class="nav-link text-white">Quienes somos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="FAQ.html" class="nav-link">FAQ</a>
+                    <a href="FAQ.html" class="nav-link text-white">FAQ</a>
                 </li>
                 <li class="nav-item">
-                    <a href="iniciosesion.html" class="nav-link">Iniciar sesión</a>
+                    <a href="iniciosesion.html" class="nav-link text-white">Iniciar sesión</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#learn" class="nav-link">Registro</a>
+                    <a href="registro.html" class="nav-link  text-white">Registro</a>
                 </li>
             </ul>
         </div>
         </div>
-   </nav>
+   </nav> 
 
    <div class="container">
     <div class="row justify-content-center pt-5 mt-5 text-white">
