--- a/index.html
+++ b/index.html
@@ -120,10 +120,11 @@
 </section>
 
 <!-- Algo de informacion sobre la empresa-->
-
+<!--Seccuion de introduccin a la pagina web. con un padding de 5-->
 <section id="learn" class="p-5">
+    <!--Contenedor resposnive a todos los formatos-->
     <div class="container">
-        <div class="row align-items-center justify-content-between">
+        <div class="row align-items-center justify-content">
             <div class="col-md">
                 <img src="img/cerebro.png" class="img-fluid align" width="350">
             </div>
@@ -144,41 +145,57 @@
 
 <!-- Fundadores de la empresa-->
 
+<!--Esta es la seccion de los fundandores de la empresa-->
+
 <section id="intructors" class="p-5 text-white">
+    <!--clase container para que el bloque adapte el contenido segun resolucion-->
     <div class="container">
+
+        <!-- titulo con un padding de 1-->
         <h2 class="text-center text-white p-1">Nuestro equipo</h2>
+        <!-- Introduccion con un padding de 3 y lead para destacar los parrafos-->
         <p class="lead text-center text-white p-3">
             Cada uno de nosotros es fundamental en el desarrollo de la empresa.
         </p>
+        <!-- una columna con un padding de altura de 4 entre cajones -->
         <div class="row g-4">
+            <!-- Cada col es una fila, en resolucion completa se veran 3 tarjetas-->
+            <!-- Solo caben 12 en horizonal. Se divide 12 entre los cajones, hay 6 cajones, no caben todos -->
+            <!-- Se colocaran grupos de 3, para ello lg será 4-->
+            <!-- En una resolucion inferior a 768px se veran 2 cajones-->
+            <!-- En una resolucion inferior a 992px se veran 3 cajones-->
         <div class="col-md-6 col-lg-4">
+            <!-- la clase card nos permite crear tarjetas, estas sera con texto blanco-->
             <div class="card text-white">
+                <!-- texto centrado-->
                 <div class="card-body text-center">
-                    <img src="img/imagen.jpg" class="rounded-circle mb-3 foto-equipo">
-                    <h3 class="card-title mb-3">
+                    <!--la imagen se ha colocado con formato circular y la clase de css <<foto-equipo>>-->
+                    <img src="img/imagen.jpg" class="rounded-circle foto-equipo">
+                    <!-- Un padding top para separar el titulo de la imagen-->
+                    <h3 class="card-title pt-2">
                         Asier Mejuto
                     </h3>
-                    <p class="card-text text-white">Jefe de Seguridad y Disponilidad de Sistemas y Redes</p>
+                    <!--Una clase para el texto-->
+                    <p class="text-white">Jefe de Seguridad</p>
+                      <!--La clase bi permite colocar iconos, en este caso twitter, instagram y linkedin-->
                     <a href="#"><i class="bi bi-twitter text-white mx-1"></i></a> 
                     <a href="#"><i class="bi bi-instagram text-white mx-1"></i></a>
                     <a href="#"><i class="bi bi-linkedin text-white mx-1"></i></a>
                     </i></a>
                 </div>
-  
             </div>
         </div>
         <div class="col-md-6 col-lg-4 text-white ">
             <div class="card">
                 <div class="card-body text-center">
-                    <img src="img/imagen.jpg" class="rounded-circle mb-3 foto-equipo">
-                    <h3 class="card-title mb-3">
+                    <img src="img/imagen.jpg" class="rounded-circle foto-equipo">
+                    <h3 class="card-title pt-2">
                         Ander Herrero
                     </h3>
-                    <p class="card-text">Atención al Cliente y Departamento de Hardware</p>
+                    <p class="card-text"> Departamento de Hardware</p>
                     <a href="#"><i class="bi bi-twitter text-white mx-1"></i></a> 
                     <a href="#"><i class="bi bi-instagram text-white mx-1"></i></a>
                     <a href="#"><i class="bi bi-linkedin text-white mx-1"></i></a>
-
                     </i></a>
                 </div>
   
@@ -187,11 +204,11 @@
         <div class="col-md-6 col-lg-4">
             <div class="card">
                 <div class="card-body text-center">
-                    <img src="img/prueba.jpg" class="rounded-circle mb-3 foto-equipo">
-                    <h3 class="card-title mb-3">
+                    <img src="img/prueba.jpg" class="rounded-circle foto-equipo">
+                    <h3 class="card-title pt-2">
                         José Luis Villalba
                     </h3>
-                    <p class="card-text">Departamento de Marketing y Relaciones Públicas</p>
+                    <p class="card-text">Jefe de sistemas Linux</p>
                     <a href="#"><i class="bi bi-twitter text-white mx-1"></i></a> 
                     <a href="#"><i class="bi bi-instagram text-white mx-1"></i></a>
                     <a href="#"><i class="bi bi-linkedin text-white mx-1"></i></a>
@@ -203,8 +220,8 @@
         <div class="col-md-6 col-lg-4">
             <div class="card">
                 <div class="card-body text-center">
-                    <img src="img/imagen.jpg" class="rounded-circle mb-3 foto-equipo">
-                    <h3 class="card-title mb-3">
+                    <img src="img/imagen.jpg" class="rounded-circle foto-equipo">
+                    <h3 class="card-title pt-2">
                         Alex Crespo
                     </h3>
                     <p class="card-text">RRHH</p>
@@ -219,8 +236,8 @@
         <div class="col-md-6 col-lg-4">
             <div class="card">
                 <div class="card-body text-center">
-                    <img src="img/adrian.jpg" class="rounded-circle mb-3 foto-equipo">
-                    <h3 class="card-title mb-3">
+                    <img src="img/adrian.jpg" class="rounded-circle foto-equipo">
+                    <h3 class="card-title pt-2">
                         Adrián Martinez
                     </h3>
                     <p class="card-text">Marketing Y relaciones públicas</p>
@@ -234,8 +251,8 @@
         <div class="col-md-6 col-lg-4">
             <div class="card">
                 <div class="card-body text-center">
-                    <img src="img/anthony(1).jpg" class="rounded-circle mb-3 foto-equipo">
-                    <h3 class="card-title mb-3">
+                    <img src="img/imagen.jpg" class="rounded-circle foto-equipo">
+                    <h3 class="card-title pt-2">
                         Anthony Murriel
                     </h3>
                     <p class="card-text">CEO y Desarrollador Frontend</p>
@@ -251,12 +268,17 @@
 </section>
 
 <!--Información de contacto-->
+    <!-- Se establece nueva seccion donde ira la informacion de contacto de la empresa -->
 <section class="p-5">
+    <!-- Un container para hacer la informacion responsive segun resolucion -->
     <div class="container">
+        <!--Empezamos con un row, sino no se puede establecer columnas-->
         <div class="row">
-            <div class="col-md-12">
+            <!--Como solo se establecera una fila, esta puede tener el valor de 12 -->
+            <!-- Al ser uno se podria prescindir de este parametro-->
+            <div class="col">
                 <h2 class="text-center mb-4 text-white ">Información de contacto</h2>
-                    <ul class="listy-group list-group-flush lead">
+                    <ul class="list-group lead text-center">
                         <li class="list-group-item informacion text-white">
                             <span class="fw-bold">Dirección</span>
                             Autonomía kalea
