--- a/FAQ.html
+++ b/FAQ.html
@@ -19,7 +19,6 @@
     <!--NAVBAR-->
     <nav class="nav.navbar navbar-expand-lg  navbar-dark py-3 fixed-top menu">
       <div class="container">
-          <a href="index.html" class="navbar-brand fs-1">TindWare</a>
           <button 
           class="navbar-toggler" 
           type="buttom" 
@@ -29,7 +28,8 @@
           </button>
       <!-- Aqui la barra de navegacion-->
       <div class="collapse navbar-collapse" id="navmenu">
-          <ul class="navbar-nav ms-auto">
+          <a href="index.html" class="navbar-brand fs-1">TindWare</a>
+          <ul class="navbar-nav ms-auto lead">
               <li class="nav-item">
                   <a href="qs.html" class="nav-link text-white">Quienes somos</a>
               </li>
@@ -183,26 +183,30 @@
                 <div class="col-lg-4 col-md-6 footer-links">
                     <h4>Links de utilidad</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Quines somos</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Iniciar sesion</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a href="#">Registrarse</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="index.html">Inicio</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="qs.html">Quines somos</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="iniciosesion.html">Iniciar sesion</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="registro.html">Registrarse</a></li>
                         <li><i class="bx bx-chevron-right"></i> <a href="#">Politica de privacidad</a></li>
                     </ul>
                 </div>
                 
                 <div class="col-lg-4 col-md-6 footer-contact">
-                    <h4>Contact Us</h4>
-                    <p> A108 Adam Street <br> New York, NY 535022<br> United States <br><br> <strong>Phone:</strong> +1 5589 55488 55<br> <strong>Email:</strong> info@example.com<br> </p>
+                    <h4>Contactanos</h4>
+                    <p> Autonomia Kalea, 62, 48012  <br> 
+                        Bilbao, Bizkaia<br> 
+                        España <br><br> 
+                        <strong>Teléfono:</strong> +34 667 36 59 58<br> 
+                        <strong>Email:</strong> tinddware@gmail.com<br> </p>
                 </div>
                 <div class="col-lg-4 col-md-6 footer-info">
-                    <h3>Sobre TindWare</h3>
-                    <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+                    <h3>SOBRE TINDWARE</h3>
+                    <p>Empresa dedicada al mantenimiento informático y la creación de proyectos.</p>
                     <div class="social-links mt-3"> 
-                        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> 
-                        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> 
-                        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> 
+                        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+                        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> 
+                        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a> 
+                        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a> 
                     </div>
                 </div>
                 <div class="col-lg-12 text-white text-center position-relative">
@@ -216,7 +220,8 @@
     </div>
    
 </footer>
-</footer>
+
+
 
 
 
