--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -19,7 +19,6 @@
     <!--NAVBAR-->
     <nav class="nav.navbar navbar-expand-lg  navbar-dark py-3 fixed-top menu">
         <div class="container">
-            <a href="index.html" class="navbar-brand fs-1">TindWare</a>
             <button 
             class="navbar-toggler" 
             type="buttom" 
@@ -29,7 +28,8 @@
             </button>
         <!-- Aqui la barra de navegacion-->
         <div class="collapse navbar-collapse" id="navmenu">
-            <ul class="navbar-nav ms-auto">
+            <a href="index.html" class="navbar-brand fs-1">TindWare</a>
+            <ul class="navbar-nav ms-auto lead">
                 <li class="nav-item">
                     <a href="qs.html" class="nav-link text-white">Quienes somos</a>
                 </li>
