--- a/qs.html
+++ b/qs.html
@@ -21,7 +21,6 @@
     <!--menu-->
     <nav class="nav.navbar navbar-expand-lg  navbar-dark py-3 fixed-top menu">
         <div class="container">
-            <a href="index.html" class="navbar-brand fs-1">TindWare</a>
             <button 
             class="navbar-toggler" 
             type="buttom" 
@@ -31,7 +30,8 @@
             </button>
         <!-- Aqui la barra de navegacion-->
         <div class="collapse navbar-collapse" id="navmenu">
-            <ul class="navbar-nav ms-auto">
+            <a href="index.html" class="navbar-brand fs-1">TindWare</a>
+            <ul class="navbar-nav ms-auto lead">
                 <li class="nav-item">
                     <a href="qs.html" class="nav-link text-white">Quienes somos</a>
                 </li>
