algunas cositas chidoris

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="container">
                 <div class="row g-3">   
                     <div class="col-md">
-                        <div class="card p-3  icono">
+                        <div class="card p-3 m-3  icono">
                             <div class="card-body text-center">
                                 <h3 class="card-title mb-3"></h3>
                                 <p class="lead card-text justificador">Técnicos completamente preparados para el desarrollo, tanto de asistencia 365 como que proyectos que puedan exigir unos conocimientos realmente avanzados o especificos.</p>   
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="col-md">
-                        <div class="card p-3">
+                        <div class="card p-3 icono m-3">
                             <div class="card-body text-center">
                                 <h3 class="card-title mb-3"></h3>
                                 <p class="lead card-text justificador">Nos esforzamos para que tengas persona detras de la pantalla, un técnico que este dispuesto a prestar sus servicios en la hora o el dia o el instante que haga falta, los 365 dias del año.</p>
@@ -113,7 +113,7 @@
 </section>
 
 <!-- Algo de informacion sobre la empresa-->
-<!--Seccion de introduccin a la pagina web. con un padding de 5-->
+<!--Seccion de introduccion a la pagina web. con un padding de 5-->
 <section id="learn" class="p-5 mt-5">
     <!--Contenedor resposnive a todos los formatos-->
     <div class="container">
